# ProsusHackathon

./: .env.example  Deterministic_Restaurant_Agent_Strategy.docx  Prosus_AISO AI Agent Hackathon Cheat Sheet .md  README.md  SPEC.md  hybrid_restaurant_agent_codex_spec.md  main.py  pyproject.toml  ~$terministic_Restaurant_Agent_Strategy.docx
sim-starterkit/: requirements.txt
sim-starterkit/agents/: evaluate.py  log_report.py  my_agent.py  my_agent_config.py  my_agent_inventory.py  my_agent_llm.py  my_agent_optimizer.py  my_agent_rules.py  my_agent_utils.py  run_logging.py  runner.py
sim-starterkit/agents/hybrid_operator/: __init__.py  agent.py  constants.py  economics.py  finance.py  inventory.py  logging_utils.py  memory.py  menu.py  metrics.py  optimization.py  planner.py  pricing.py  prompts.py  risk.py  satisfaction.py  scenario.py  staffing.py  state.py  suppliers.py  survival.py  validator.py
sim-starterkit/tests/: test_hybrid_operator.py
